src/objects/Application_Manager_Selection_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>App_Type__c</fullName>
        <formula>TEXT( Application_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Manager_Selection_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>Embedded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application Manager Selection Matrices</relationshipLabel>
        <relationshipName>Application_Manager_Selection_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Application Manager Selection Matrices</relationshipLabel>
        <relationshipName>Application_Manager_Selection_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application Manager Selection Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application Manager Selection Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Manager Selection Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>